# wordlebot

./: Cargo.toml  cfg.toml  ircconf.toml
src/: game.rs  irccmd.rs  main.rs  server.rs  words.rs
templates/: game.html
