[package]
name = "wordlebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
word2vec = "0.3.3"
irc = "0.15.0"
anyhow = "1.0.0"
futures = "0.3.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "net", "time"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.10"
thiserror = "1.0.30"
axum = "0.5.1"
rusqlite = { version = "0.27", features = ["bundled", "serde_json"] }
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
askama = "0.11.1"
rand = "0.8.5"
chrono = "0.4"